fixed gutters on mobile

--- a/themes/pure-single/static/css/pure.css
+++ b/themes/pure-single/static/css/pure.css
@@ -265,6 +265,9 @@ pre {
     position: relative;
 }
 @media (max-width: 767px) {
+    body {
+        padding:0;
+    }
     .sidebar {
         width: 100%;
         position: relative;
